# FKAN-Biostatistics

./: .gitignore  FKAN Code.ipynb  KAN_real.ipynb  KAN_real_drop_leaky_attention.ipynb  best_model_v2.pth  best_model_v3.pth  pyproject.toml  resnet.py  run.sh
KAN_Model/: C-Kan Test Code L2.ipynb  C-Kan Test Code.ipynb  KAN_Final_Linear.ipynb  KAN_Fourier.ipynb  KAN_KAL_NET.ipynb  KAN_Linear.ipynb  KAN_Original.ipynb  KAN_eff.ipynb  KAN_fast.ipynb  KAN_real.ipynb  KAN_real_PreProc.ipynb  KAN_real_drop_leaky_attention.ipynb  KAN_real_drop_leaky_g.ipynb  KAN_real_drop_leaky_newcnn.ipynb  KAN_real_final.ipynb  KAN_real_g.ipynb  ModelComp.ipynb  fkan_resnet_model.ipynb
KAN_Model_Py/: KAN_real_final.py
model/: 0.0_config.yml  0.0_state
src/: C-Kan Test Code.ipynb  FKAN Code.ipynb
src/CNN/: resnet.py  (+3 more)
tensorboard_logs/: events.out.tfevents.1737044352.wtmpc804.1182995.0  events.out.tfevents.1737044756.wtmpc804.1192607.0  events.out.tfevents.1737045107.wtmpc804.1201683.0  events.out.tfevents.1737046730.wtmpc804.1212842.0  events.out.tfevents.1737046750.wtmpc804.1213273.0  events.out.tfevents.1737046813.wtmpc804.1213972.0  events.out.tfevents.1737047411.wtmpc804.1223742.0  events.out.tfevents.1737047875.wtmpc804.1232477.0  events.out.tfevents.1737049288.wtmpc804.1247395.0  events.out.tfevents.1737049362.wtmpc804.1249937.0  events.out.tfevents.1737049466.wtmpc804.1253456.0  events.out.tfevents.1737104885.wtmpc804.1716834.0  events.out.tfevents.1737105312.wtmpc804.1757042.0  events.out.tfevents.1737105346.wtmpc804.1757517.0  events.out.tfevents.1737105504.wtmpc804.1760649.0  (+2 more)
(+52 files in other folders)
